# gcp-analytics-pipeline

./: .gitignore  DATA_STRUCTURE.md  README.md  SETUP_GUIDE.md  SETUP_INSTRUCTIONS.md  main.py  pyproject.toml  quickstart.sh
docs/: README.md  TASK5_EXECUTION_GUIDE.md  TASK6_EXECUTION_GUIDE.md  TASK7_EXECUTION_GUIDE.md
output/: checkpoint_000100.json  checkpoint_000200.json  checkpoint_000300.json  checkpoint_000400.json  checkpoint_000500.json  checkpoint_000600.json  checkpoint_000700.json  checkpoint_000800.json  checkpoint_000900.json  checkpoint_001000.json  checkpoint_001100.json  checkpoint_001200.json  checkpoint_001300.json  checkpoint_001400.json  checkpoint_001500.json  checkpoint_001600.json  checkpoint_001700.json  checkpoint_001800.json  checkpoint_001900.json  checkpoint_002000.json  checkpoint_002100.json  checkpoint_002200.json  checkpoint_002300.json  checkpoint_002400.json  checkpoint_002500.json  checkpoint_002600.json  checkpoint_002700.json  checkpoint_002800.json  checkpoint_002900.json  checkpoint_003000.json  checkpoint_003100.json  checkpoint_003200.json  checkpoint_003300.json  checkpoint_003400.json  checkpoint_003500.json  checkpoint_003600.json  (+77 more)
src/: pyproject.toml
src/core/: ip_location_processor.py  product_collector.py
src/runners/: run_full_crawl copy.py  run_full_crawl.py  run_ip_processing.py  run_product_collection.py
src/scripts/: monitor_products.sh  monitor_progress.sh  run_product_with_nohup.sh  run_with_nohup.sh
src/test/: test_scrape.py
src/utils/: data_quality_report.py  verify_data_quality.py
(+281 files in other folders)
