[project]
name = "ip-location-processor"
version = "0.1.0"
description = "IP Location Processing using ip2location and MongoDB"
requires-python = ">=3.8"
dependencies = [
    "ip2location",
    "pymongo",
    "python-dotenv",
    "requests>=2.32.5",
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
